Added some callback docs.

--- a/_includes/global-scripts.html
+++ b/_includes/global-scripts.html
@@ -10,6 +10,7 @@
 
 <script type="text/javascript" src="{{ page.pathprefix }}js/syntaxhighlighter_3.0.83/scripts/shCore.js"></script> 
 <script type="text/javascript" src="{{ page.pathprefix }}js/syntaxhighlighter_3.0.83/scripts/shBrushJava.js"></script> 
+<script type="text/javascript" src="{{ page.pathprefix }}js/syntaxhighlighter_3.0.83/scripts/shBrushJScript.js"></script> 
 <script type="text/javascript" src="{{ page.pathprefix }}js/syntaxhighlighter_3.0.83/scripts/shBrushXml.js"></script> 
 <link type="text/css" rel="stylesheet" href="{{ page.pathprefix }}js/syntaxhighlighter_3.0.83/styles/shThemeFadeToGrey.css"/>  
 
