--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>Knockout : {{ page.title }}</title>
+        <title>Twinkql : {{ page.title }}</title>
         <link href="{{ page.pathprefix }}css/tripoli.simple.css" type="text/css" rel="stylesheet" /> 
         <link rel="stylesheet" type="text/css" href="{{ page.pathprefix }}css/styles.css" />
         <link rel="stylesheet" type="text/css" href="{{ page.pathprefix }}css/smallScreen.css" media="only screen and (max-device-width: 800px)" />
@@ -21,7 +21,7 @@
             {% include main-menu.html %}
         </div>
         
-        <div id="page-footer">(c) knockoutjs.com</div> 
+        <div id="page-footer">(c) twinkql.org</div> 
         
 		  <script type="text/javascript">
 		
