--- a/_includes/documentation-menu.html
+++ b/_includes/documentation-menu.html
@@ -30,31 +30,15 @@
 
 <h2>Working with ResultSets</h2>
 <ol>
-	<li><a href="after-callback.html">The <code>after</code> binding</a></li>
-    <li><a href="click-binding.html">The <code>click</code> binding</a></li>
-    <li><a href="event-binding.html">The <code>event</code> binding</a></li>
-    <li><a href="submit-binding.html">The <code>submit</code> binding</a></li>
-    <li><a href="enable-binding.html">The <code>enable</code> binding</a></li>
-    <li><a href="disable-binding.html">The <code>disable</code> binding</a></li>
-    <li><a href="value-binding.html">The <code>value</code> binding</a></li>
-    <li><a href="hasfocus-binding.html">The <code>hasfocus</code> binding</a></li>
-    <li><a href="checked-binding.html">The <code>checked</code> binding</a></li>
-    <li><a href="options-binding.html">The <code>options</code> binding</a></li>
-    <li><a href="selectedOptions-binding.html">The <code>selectedOptions</code> binding</a></li>    
-    <li><a href="uniqueName-binding.html">The <code>uniqueName</code> binding</a></li>		
+	<li><a href="afterMap-callback.html">The <code>afterMap</code> callback</a></li>	
 </ol>
 
 <h2>Spring integration</h2>
 <ol>
-    <li><a href="custom-bindings.html">Creating custom bindings</a></li>
-    <li><a href="custom-bindings-controlling-descendant-bindings.html">Controlling descendant bindings</a></li>
-    <li><a href="custom-bindings-for-virtual-elements.html">Supporting virtual elements</a></li>
+    <li><a href="spring.html">Creating custom bindings</a></li>
 </ol>
 
 <h1>More information</h1>
 <ol>
-    <li><a href="browser-support.html">Browser support</a></li>
-    <li><a href="http://groups.google.com/group/knockoutjs">Getting help</a></li>
     <li><a href="links.html">Links to tutorials &amp; examples</a></li>
-    <li><a href="amd-loading.html">Usage with AMD using RequireJs (Asynchronous Module Definition)</a></li>
 </ol>
