Update for new package names.

--- a/_includes/documentation-menu.html
+++ b/_includes/documentation-menu.html
@@ -21,7 +21,7 @@
 
 <ol>
 	<li><a href="template.html"><em>TwinkqlTemplate</em></a></li>
-    <li><a href="template-factory.html"><em>TwinkqlTemmplateFactory</em></a></li>
+    <li><a href="template-factory.html"><em>TwinkqlTemplateFactory</em></a></li>
     <li><a href="spring-template-factory.html">Using Spring</a></li>
 </ol>
 
