More resultMap docs.

--- a/_includes/documentation-menu.html
+++ b/_includes/documentation-menu.html
@@ -34,19 +34,17 @@
 <h2>Defining a SPARQL Query</h2>
 <ol>
 	<li><a href="select.html">A SPARQL <code>select</code></a></li>
+	<li><a href="dynamic-parameters.html">Dynamic parameters</a></li>
 </ol>
 
 <h2>Working with ResultSets</h2>
 <ol>
+	<li><a href="resultMap.html">The <code>resultMap</code></a></li>
+	<li><a href="associations-and-collections.html">Associations and Collections</a></li>
 	<li><a href="afterMap-callback.html">The <code>afterMap</code> callback</a></li>	
-</ol>
-
-<h2>Spring integration</h2>
-<ol>
-    <li><a href="spring.html">Creating custom bindings</a></li>
 </ol>
 
 <h1>More information</h1>
 <ol>
-    <li><a href="links.html">Links to tutorials &amp; examples</a></li>
+    <li><a href="links.html">Links &amp; more information</a></li>
 </ol>
