--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
             <div class="vspace"></div>
             {{ content }}
             <div class="clear"></div>
-            {% include main-menu.html %}
+<!--             {% include main-menu.html %} -->
         </div>
         
         <div id="page-footer">(c) twinkql.org</div> 
