--- a/_includes/main-menu.html
+++ b/_includes/main-menu.html
@@ -2,7 +2,7 @@
     <ul>
         <li><a rel="home" href="{{ page.pathprefix }}index.html">Home</a></li>
         <li><a rel="installation" href="{{ page.pathprefix }}documentation/installation.html">Download / Install</a></li>
-        <li><a rel="examples" href="{{ page.pathprefix }}examples/">Examples</a></li>
+        <li><a rel="examples" href="{{ page.pathprefix }}documentation/examples.html">Examples</a></li>
         <li><a rel="documentation" href="{{ page.pathprefix }}documentation/introduction.html">Documentation</a></li>
         <li><a href="http://github.com/cts2/twinkql">Source</a></li>
         <li><a href="http://groups.google.com/group/twinkql">Forum</a></li>
