Added a fav icon.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,9 @@
         <!--[if lte IE 7]><link rel="stylesheet" type="text/css" href="{{ page.pathprefix }}css/ie6ie7.css" /><![endif]-->
         <!--[if lte IE 6]><link rel="stylesheet" type="text/css" href="{{ page.pathprefix }}css/ie6.css" /><![endif]-->
         {% include global-scripts.html %}
+        <link rel="icon" 
+	    	type="image/png" 
+	     	href="/img/favicon.png">
     </head>
     <body>
         <div id="wrapper">
