Added 'modifier' docs.

--- a/_includes/documentation-menu.html
+++ b/_includes/documentation-menu.html
@@ -42,7 +42,8 @@
 	<li><a href="resultMap.html">The <code>resultMap</code></a></li>
 	<li><a href="rowMap.html">The <code>rowMap</code></a></li>
 	<li><a href="associations-and-collections.html">Associations and Collections</a></li>
-	<li><a href="afterMap-callback.html">The <code>afterMap</code> callback</a></li>	
+	<li><a href="afterMap-callback.html">The <code>afterMap</code> callback</a></li>
+	<li><a href="modifier-callback.html">The <code>modifier</code> callback</a></li>	
 </ol>
 
 <h1>More information</h1>
