Added a Twitter icon.

--- a/_includes/main-menu.html
+++ b/_includes/main-menu.html
@@ -6,6 +6,7 @@
         <li><a rel="documentation" href="{{ page.pathprefix }}documentation/introduction.html">Documentation</a></li>
         <li><a href="http://github.com/cts2/twinkql">Source</a></li>
         <li><a href="http://groups.google.com/group/twinkql">Forum</a></li>
+        <li><a href="https://twitter.com/Twinkql"><img src="/img/twitter.png"/></a></li>
     </ul>
 </div>        	
 <div class="clear"></div>
