--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="wrapper">
-            <div class="vspace"></div>
+<!--             <div class="vspace"></div> -->
             {% include main-menu.html %}
             <div class="vspace"></div>
             {{ content }}
